# cprime

./: .gitignore  CLAUDE.md  LICENSE  README.md  test_exec_alias.cprime  test_identifier_chunking.cp  test_sample.cp
cmake/: FunctionDiscovery.cmake  (+1 more)
compiler/: CMakeLists.txt
compiler/src/: CMakeLists.txt  GPU_COMPILATION.md  README.md  ast.h  ast_builder.cpp  ast_builder.h  codegen.cpp  codegen.h  context_stack.cpp  cprime_cli.cpp  lexer.cpp  lexer.h  main.cpp  orchestrator.cpp  orchestrator.h  parser.cpp  parser.h  raw_token.cpp  raw_token.h  semantic_translator.cpp  semantic_translator.h  symbol_table.cpp  symbol_table.h  test_ast_builder.cpp  test_contextual_tokens.cpp  test_three_layer.cpp  validation_common.h  validation_pipeline.cpp  validation_pipeline.h
compiler/src/OLD/common/: component_buffer_manager.cpp  component_buffer_manager.h  debug_utils.cpp  logger_components.h  parse_context.h  string_table.cpp  tokens.h  validation_types.h
compiler/src/OLD/layer1/: raw_token.h
compiler/src/OLD/layer2/: semantic_translator.cpp  semantic_translator.h
compiler/src/OLD/layer2validation/: context_validator.cpp
compiler/src/OLD/layer3/: contextualizer.h
compiler/src/OLD/layer3validation/: contextualization_validator.cpp  contextualization_validator.h
compiler/src/OLD/layer5/: ast.cpp  symbol_table.h
compiler/src/cli/: cli_options.cpp  cli_options.h  cprime_cli.cpp
compiler/src/common/: common_types.h  debug_utils.h  logger.h  selective_buffer_sink.h  string_table.h  structural_types.cpp  structural_types.h  token_streams.h  token_types.h  token_utils.cpp  token_utils.h  tokens.h
compiler/src/commons/: context.h  contextualToken.h  contextualizationError.h  errorHandler.cpp  errorHandler.h  function_registry.cpp  function_registry.h  instruction.h  logger.cpp  logger.h  rawToken.h  scope.h  token.h  type_descriptors.h  type_registry.cpp  type_registry.h
compiler/src/commons/dirty/: common_types.h  compilation_context.h  error_collector.h  error_types.h  exec_alias_registry.cpp  exec_alias_registry.h  string_table.cpp  string_table.h  tokenizer_state.h
compiler/src/commons/enum/: contextualToken.h  contextualizationError.h  rawToken.h  token.cpp  token.h
compiler/src/errorHandler/: error_handler.cpp  error_handler.h
compiler/src/layer0/: compilation_parameters.h  input_processor.cpp  input_processor.h
compiler/src/layer0validation/: input_debug.cpp  input_debug.h  stream_inspector.cpp  stream_inspector.h
compiler/src/layer1/: context_stack.h  layer1.cpp  layer1.h  processing_chunk.h  raw_token.cpp  raw_token.h  sublayer1a.cpp  sublayer1b.cpp  sublayer1c.cpp  sublayer1d.cpp  sublayer1e.cpp  tokenizer.cpp  tokenizer.h
compiler/src/layer1validation/: layer1_debug.cpp  layer1_debug.h  layer1validation.h  token_sequence_validator.cpp  token_sequence_validator.h
compiler/src/layer1validation/dirty/: chunk_serializer.cpp  chunk_serializer.h  enum_stringifier.cpp  enum_stringifier.h  token_serializer.cpp  token_serializer.h
compiler/src/layer2/: contextual_registration_extractor.cpp  contextual_registration_extractor.h  contextual_token.cpp  contextual_token.h  contextual_token_kind.cpp  contextual_token_kind.h  layer2.cpp  layer2.h  lua_exec_runtime.cpp  lua_exec_runtime.h  semantic_token.cpp  semantic_token.h  semantic_translator.cpp  semantic_translator.h  structure_builder.cpp  structure_builder.h  sublayer2a.cpp  sublayer2b.cpp  sublayer2c.cpp  sublayer2d.cpp  token_detokenizer.cpp  token_detokenizer.h
compiler/src/layer2/contextualization/: base_contextualizer.cpp  base_contextualizer.h  context_pattern_elements.h  contextualization_pattern_matcher.cpp  contextualization_pattern_matcher.h  exec_processing.cpp  footer_contextualization.cpp  footer_contextualizer.cpp  footer_contextualizer.h  header_contextualization.cpp  header_contextualizer.cpp  header_contextualizer.h  instruction_contextualization.cpp  instruction_contextualizer.cpp  instruction_contextualizer.h  pattern_core_structures.h  pattern_definitions.cpp  pattern_definitions_body.cpp  pattern_definitions_body.h  pattern_definitions_footer.cpp  pattern_definitions_footer.h  pattern_definitions_header.cpp  pattern_definitions_header.h  pattern_definitions_optional.cpp  pattern_definitions_optional.h  reusable_pattern_registry.cpp  reusable_pattern_registry.h
compiler/src/layer2validation/: context_validator.cpp  context_validator.h  layer1validation.h  layer2validation.h
compiler/src/layer3/: ast_builder.h  contextualizer.cpp
compiler/src/layer3validation/: ast_structure_validator.cpp  ast_structure_validator.h
compiler/src/layer4/: ast_builder.h  defer_validation.cpp  defer_validation.h  destruction_order_tracker.cpp  destruction_order_tracker.h  raii_flow_analyzer.cpp  raii_flow_analyzer.h  raii_injector.cpp  scope_destructor_tracker.cpp  scope_destructor_tracker.h  symbol_table.cpp
compiler/src/layer4validation/: raii_constraint_validator.cpp  raii_constraint_validator.h  raii_flow_validator.cpp  raii_flow_validator.h
compiler/src/layer5/: ast.h  raii_injector.h
compiler/src/tests/: test_ast_builder.cpp  test_context_stack.cpp  test_contextual_tokens.cpp  test_feature_registry.cpp  test_framework.h  test_pipeline_integration.cpp  test_raii_injector.cpp  test_raw_tokenization.cpp  test_semantic_translation.cpp  test_three_layer.cpp  test_validation_layers.cpp
compiler/src/v2/: CMakeLists.txt  README.md  ast.cpp  ast.h  ast_builder.cpp  ast_builder.h  context_stack.cpp  context_stack.h  cprime_v2_cli.cpp  raw_token.cpp  raw_token.h  semantic_token.cpp  semantic_token.h  semantic_translator.cpp  semantic_translator.h  symbol_table.cpp  symbol_table.h  test_ast_builder.cpp  test_contextual_tokens.cpp  test_three_layer.cpp
compiler/tests/: CMakeLists.txt  main.cpp  test_common.h
compiler/tests/integration/: generated_layer_integration_test.cpp  layer1_integration_test.cpp  test_case_discovery.cpp  test_case_discovery.h
compiler/tests/unit/Layer1/: BasicTokenization.cpp  ProgramEntryPoint.cpp  RawTokenization.cpp
compiler/tests/unit/Layer2/: StructureBuilding.cpp
(+159 files in other folders)
